@@ -7,9 +7,12 @@ Version 1.9.0-svn:
    * Northern Rebirth:
      * In Showdown, you recover full gold only if Sisal survived the previous
        scenario.
+
  * Language and i18n:
    * Updated translations:
 
+ * User interface:
+   * Show join and observe buttons per row in the lobby.
 
 Version 1.8.0:
  * Campaigns:
