@@ -177,6 +177,8 @@ private:
 
 	void signal_handler_mouse_leave(const event::tevent event, bool& handled);
 
+	void signal_handler_pre_left_button_click(const event::tevent event);
+
 	void signal_handler_left_button_click(
 			const event::tevent event, bool& handled);
 
