@@ -10,6 +10,7 @@ Version 1.9.0-svn:
    * Removed the unused gui2 menu bar
    * Added a window register framework
    * Enabled the --new-widgets MP create dialog again
+   * Enable the hidden join observe buttons per row
 
 Version 1.8.0:
  * AI:
